--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
         <div class="contenido">
             <div class="item">
                 <a href="https://www.youtube.com/watch?v=zDqxCVxclrE" target="_blank"> 
-                <img src="/img/torre-de-aceite.png" alt=""></a>
+                <img src="./img/torre-de-aceite.png" alt=""></a>
             </div>
                      
             <div class="item">
-                <a href="/img/portfolio.mp4" target="_blank">
-                <img src="img/diseno-grafico.png" alt=""></a>
+                <a href="./img/portfolio.mp4" target="_blank">
+                <img src="./img/diseno-grafico.png" alt=""></a>
             </div>
 
             <div class="item">
                 <a href="https://roscy.github.io/primer-proyecto/ " target="_blank"> 
-                <img src="img/programacion-web.png" alt=""></a>
+                <img src="./img/programacion-web.png" alt=""></a>
             </div>
         </div>
      </section>
